[REFACTOR] change title tag

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <title>carlos3g</title>
+    <title>Carlos Mesquita</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
