[REFACTOR] change description

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Portfolio de @carlos3g" />
+    <meta
+      name="description"
+      content="Carlos Mesquita | Student at IFPI | JavaScript, React Native, ReactJS, CSS. "
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
