[FEAT] adds google site verification metatag

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+      name="google-site-verification"
+      content="SbimU1L_z5TMYrHJLLKjHAffNU8Hg3JEENj_yUYtibk"
+    />
+    <meta
       name="description"
       content="Carlos Mesquita | Student at IFPI | JavaScript, React Native, ReactJS, CSS. "
     />
