--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="top-line"></div>
     <div id="root"></div>
   </body>
 </html>
