--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,19 @@
     />
     <meta
       name="description"
-      content="Carlos Mesquita | Student at IFPI | JavaScript, React Native, ReactJS, CSS. "
+      content="Carlos Mesquita | Student at IFPI | JavaScript, React Native, ReactJS, CSS."
     />
+
+    <meta property="og:title" content="Carlos Mesquita" />
+    <meta
+      property="og:description"
+      content="Carlos Mesquita | Student at IFPI | JavaScript, React Native, ReactJS, CSS."
+    />
+    <meta property="og:url" content="https://carlos3g.github.io" />
+    <meta property="og:image" content="https://github.com/carlos3g.png" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Gothic+A1:wght@200;300;400;500;600;700&display=swap"
